--- a/Seguridad/Seguridad/Web/Control/MasterPage.master
+++ b/Seguridad/Seguridad/Web/Control/MasterPage.master
@@ -24,7 +24,7 @@
     <div class="be-wrapper be-nosidebar-left">
       <nav class="navbar navbar-default navbar-fixed-top be-top-header">
         <div class="container-fluid">
-          <div class="navbar-header"><a href="index.html" class="navbar-brand"></a></div>
+          <div class=""><a href="../Control/Index.aspx" class="navbar-brand"><img src="../Imagenes/logo.png" style="width: 90px; height: 30px;" alt="Avatar"></a></div>
           <div class="be-right-navbar">
             <ul class="nav navbar-nav navbar-right be-user-nav">
               <li class="dropdown"><a href="#" data-toggle="dropdown" role="button" aria-expanded="false" class="dropdown-toggle"><img src="../componentes/Beagle/assets/img/avatar.png" alt="Avatar"><span class="user-name">Túpac Amaru</span></a>
@@ -35,48 +35,14 @@
                       <div class="user-position online">Available</div>
                     </div>
                   </li>
-                  <li><a href="#"><span class="icon mdi mdi-face"></span> Account</a></li>
-                  <li><a href="#"><span class="icon mdi mdi-settings"></span> Settings</a></li>
-                  <li><a href="#"><span class="icon mdi mdi-power"></span> Logout</a></li>
+                  <li><a href="#"><span class="icon mdi mdi-settings"></span>Configuración</a></li>
+                  <li><a href="#"><span class="icon mdi mdi-face"></span>Mis Datos</a></li>
+                  <li><a href="../Control/CerrarSesion.aspx"><span class="icon mdi mdi-power"></span>Cerrar Sesión</a></li>
                 </ul>
               </li>
             </ul>
             <ul class="nav navbar-nav navbar-right be-icons-nav">
               <li class="dropdown"><a href="#" role="button" aria-expanded="false" class="be-toggle-right-sidebar"><span class="icon mdi mdi-settings"></span></a></li>
-              <li class="dropdown"><a href="#" data-toggle="dropdown" role="button" aria-expanded="false" class="dropdown-toggle"><span class="icon mdi mdi-notifications"></span><span class="indicator"></span></a>
-                <ul class="dropdown-menu be-notifications">
-                  <li>
-                    <div class="title">Notifications<span class="badge">3</span></div>
-                    <div class="list">
-                      <div class="be-scroller">
-                        <div class="content">
-                          <ul>
-                            <li class="notification notification-unread"><a href="#">
-                                <div class="image"><img src="../componentes/Beagle/assets/img/avatar2.png" alt="Avatar"></div>
-                                <div class="notification-info">
-                                  <div class="text"><span class="user-name">Jessica Caruso</span> accepted your invitation to join the team.</div><span class="date">2 min ago</span>
-                                </div></a></li>
-                            <li class="notification"><a href="#">
-                                <div class="image"><img src="../componentes/Beagle/assets/img/avatar3.png" alt="Avatar"></div>
-                                <div class="notification-info">
-                                  <div class="text"><span class="user-name">Joel King</span> is now following you</div><span class="date">2 days ago</span>
-                                </div></a></li>
-                            <li class="notification"><a href="#">
-                                <div class="image"><img src="../componentes/Beagle/assets/img/avatar4.png" alt="Avatar"></div>
-                                <div class="notification-info">
-                                  <div class="text"><span class="user-name">John Doe</span> is watching your main repository</div><span class="date">2 days ago</span>
-                                </div></a></li>
-                            <li class="notification"><a href="#">
-                                <div class="image"><img src="../componentes/Beagle/assets/img/avatar5.png" alt="Avatar"></div>
-                                <div class="notification-info"><span class="text"><span class="user-name">Emily Carter</span> is now following you</span><span class="date">5 days ago</span></div></a></li>
-                          </ul>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="footer"> <a href="#">View all notifications</a></div>
-                  </li>
-                </ul>
-              </li>
             </ul>
           </div><a href="#" data-toggle="collapse" data-target="#be-navbar-collapse" class="be-toggle-top-header-menu collapsed">No Sidebar Left</a>
           <div id="be-navbar-collapse" class="navbar-collapse collapse">
@@ -116,6 +82,11 @@
                   <li><a href="../Prevencion/MatrizLegal.aspx">Matriz Legal</a></li>
                   <li><a href="../Prevencion/Auditorias.aspx">Auditorías</a></li>
                   <li><a href="../Prevencion/Documentos.aspx">Documentos</a></li>
+                </ul>
+              </li>
+              <li class="dropdown"><a href="#" data-toggle="dropdown" role="button" aria-expanded="false" class="dropdown-toggle">Configuración<span class="mdi mdi-caret-down"></span></a>
+                <ul role="menu" class="dropdown-menu">
+                  <li><a href="../Usuarios/ListarUsuarios.aspx">Usuarios</a></li>
                 </ul>
               </li>
             </ul>
